@@ -1,3 +1,11 @@
+2005-03-04  Mark McLoughlin  <markmc@redhat.com>
+
+	* admin-tool/editorwindow.py: convert to using
+	gtk.UIManager.
+	
+	* admin-tool/sabayon.glade: remove the editor
+	window.
+
 2005-03-03  Mark McLoughlin  <markmc@redhat.com>
 
 	* admin-tool/Makefile.am: add saveconfirm.py
